# blitz-tanks

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  check.yaml  publish.yaml  udeps.yaml  update-tankopedia.yaml
src/: cli.rs  db.rs  giveaway.rs  main.rs  models.rs  prelude.rs  tankopedia.rs  tracing.rs  trainer.rs  web.rs  weegee.rs  wg.rs
src/cli/: export.rs  giveaway.rs  migrate_votes.rs
src/db/: models.rs  session.rs  sessions.rs  tankopedia.rs  votes.rs
src/models/: account_id.rs  rated_tank_id.rs  rating.rs  tank_id.rs  user.rs  vehicle.rs  vote.rs
src/tankopedia/: .gitattributes  bundler.rs  dvpl.rs  unpacker.rs  vendored.rs
src/tankopedia/tests/: european-Cz08_T-25BPS_skin@2x.packed.webp.dvpl  list.xml.dvpl
src/trainer/: item_item.rs  merge_join_by.rs  metrics.rs  prediction.rs  validate.rs
src/web/: authenticate.rs  error.rs  extract.rs  headers.rs  index.rs  models.rs  partials.rs  prelude.rs  profile.rs  response.rs  result.rs  session.rs  state.rs  static.rs  tracing_.rs  user.rs  views.rs
src/web/partials/: footer.rs  head.rs  navbar.rs  vehicle_card.rs
src/web/views/: authenticate.rs  discover.rs  index.rs  partials.rs  profile.rs  sign_out.rs
src/wg/: error.rs  result.rs  stats.rs
