[package]
name = "blitz-tanks"
version = "0.0.0"
edition = "2021"
description = "Recommender system for World of Tanks Blitz"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
arc-swap = "1.6.0"
axum = { version = "0.6.19", default-features = false, features = ["tokio", "http1", "http2", "tracing", "headers", "query"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock", "serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.3.19", features = ["derive", "env", "cargo"] }
cookie = "0.17.0"
crc32fast = "1.3.2"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
dotenvy = "0.15.7"
either = "1.9.0"
fastrand = "2.0.0"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
image = { git = "https://github.com/image-rs/image", rev = "7caf2fa", features = ["png", "webp", "webp-encoder"] }
img-parts = "0.3.0"
indexmap = { version = "1.9.3", features = ["rayon"] }
indicatif = { version = "0.17.5" }
indoc = "2.0.3"
itertools = "0.11.0"
jemalloc-ctl = "0.5.0"
jemallocator = "0.5.0"
lz4_flex = { version = "0.11.1", default-features = false, features = ["std", "safe-decode"] }
maud = { version = "0.25.0", features = ["axum"] }
moka = { version = "0.11.2", default-features = false, features = ["future", "atomic64"] }
mongodb = { version = "2.6.0", features = ["tracing", "bson-uuid-1", "bson-chrono-0_4"] }
monostate = "0.1.9"
phf = { version = "0.11.2", features = ["macros"] }
quick-xml = { version = "0.29.0", features = ["serialize"] }
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "json", "rustls-tls"] }
sentry = { version = "0.31.5", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "tracing", "reqwest", "rustls", "profiling", "tower", "tower-http"] }
serde = "1.0.174"
serde_json = "1.0.103"
serde_with = { version = "3.1.0", features = ["chrono", "indexmap"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.29.1", default-features = false, features = ["fs", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.3.3"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
