[package]
name = "blitz-tanks"
version = "0.0.0"
edition = "2021"
description = "Recommender system for World of Tanks Blitz"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
arc-swap = "1.6.0"
axum = { version = "0.7.2", default-features = false, features = ["tokio", "http1", "http2", "tracing", "headers", "query"] }
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.4.11", features = ["derive", "env", "cargo"] }
cookie = "0.18.0"
crc32fast = "1.3.2"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
dotenvy = "0.15.7"
either = "1.9.0"
fastrand = "2.0.1"
futures = { version = "0.3.29", default-features = false, features = ["std"] }
image = { version = "0.24.7", features = ["png", "webp", "webp-encoder"] }
img-parts = "0.3.0"
indexmap = { version = "1.9.3", features = ["rayon"] }
indicatif = { version = "0.17.7" }
indoc = "2.0.4"
itertools = "0.12.0"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
lz4_flex = { version = "0.11.1", default-features = false, features = ["std", "safe-decode"] }
maud = { version = "0.25.0", features = ["axum"] }
moka = { version = "0.12.1", default-features = false, features = ["future", "atomic64"] }
mongodb = { version = "2.8.0", features = ["tracing", "bson-uuid-1", "bson-chrono-0_4"] }
monostate = "0.1.10"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rayon = "1.8.0"
reqwest = { version = "0.11.23", default-features = false, features = ["gzip", "json", "rustls-tls"] }
sentry = { version = "0.32.1", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "tracing", "reqwest", "rustls", "tower", "tower-http"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["chrono", "indexmap"] }
serde_yaml = "0.9.29"
thiserror = "1.0.51"
tokio = { version = "1.35.1", default-features = false, features = ["fs", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2.4.0"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
